# sni-spoofing-ts

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  docker-image.yml  release.yml
docker/: Dockerfile  README.md  entrypoint.sh
releases/: README.md  sni-spoof-rs-linux-amd64  sni-spoof-rs-linux-arm64  sni-spoof-rs-macos-amd64  sni-spoof-rs-macos-arm64
src/: config.rs  error.rs  handler.rs  lib.rs  listener.rs  main.rs  proxy.rs  scan.rs  shutdown.rs  xray.rs
src/packet/: mod.rs  tls.rs
src/sniffer/: linux.rs  macos.rs  mod.rs  windows.rs
