[package]
name = "sni-spoof-rs"
version = "1.0.1"
edition = "2021"

[lib]
name = "sni_spoof_rs"
path = "src/lib.rs"

[[bin]]
name = "sni-spoof-rs"
path = "src/main.rs"

[[bin]]
name = "sni-spoof-rs-ui"
path = "src/bin/ui.rs"
required-features = ["ui"]

[features]
default = []
ui = ["dep:eframe"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
socket2 = "0.5"
tokio-util = "0.7"
rand = "0.8"
tokio-io-timeout = "1.2.1"
base64 = "0.22"
url = "2.5"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "wgpu",
    "accesskit",
], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["net", "ioctl"] }

[target.'cfg(windows)'.dependencies]
windivert = { version = "0.7.0-beta", features = ["static"] }

[profile.release.package.windivert-sys]
opt-level = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
